avoid installation of symlinks - sometimes they are not installed in the cloning process.

--- a/rosbridge_server/CMakeLists.txt
+++ b/rosbridge_server/CMakeLists.txt
@@ -11,10 +11,10 @@ ament_package()
 
 install(PROGRAMS
   scripts/rosbridge_websocket.py
-  scripts/rosbridge_websocket
+  # scripts/rosbridge_websocket
   scripts/rosbridge_tcp.py
-  scripts/rosbridge_tcp
-  scripts/rosbridge_udp
+  # scripts/rosbridge_tcp
+  # scripts/rosbridge_udp
   scripts/rosbridge_udp.py
   DESTINATION lib/${PROJECT_NAME}
 )
