--- a/rosbridge_library/package.xml
+++ b/rosbridge_library/package.xml
@@ -34,6 +34,7 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>python3-bson</exec_depend>
+  <exec_depend>ujson</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
