--- a/rosbridge_server/CMakeLists.txt
+++ b/rosbridge_server/CMakeLists.txt
@@ -18,6 +18,7 @@ install(PROGRAMS
 
 install(FILES
   launch/rosbridge_websocket_launch.xml
+  launch/rover.launch.py
   DESTINATION share/${PROJECT_NAME}/launch
 )
 
